--- a/locales/en.json
+++ b/locales/en.json
@@ -1,30 +1,29 @@
 {
-    "already_muted": "❌ | <b>Already muted.</>",
-    "assistant_not_in_group": "❌ | <b>My assistant is not here.</>",
-    "authors": ["rojserbest"],
-    "caches_deleted": "🗑 | <b>Caches deleted.</>",
+    "already_muted": "❌ | <b>Already muted.</b>",
+    "assistant_not_in_group": "❌ | <b>My assistant is not here.</b>",
+    "caches_deleted": "🗑 | <b>Caches deleted.</b>",
     "custom_input": "Custom Input",
-    "error": "❌ | <b>An error occurred.</>",
-    "error_with_message": "❌ | <b>An error occurred:</> {{message}}",
-    "file_too_big": "❌ | <b>This file is too big.</>",
-    "invalid_volume": "❌ | <b>Pass a number between 0 and 200.</>",
-    "loop_off": "🔁 | <b>Turned loop off.</>",
-    "loop_on": "🔁 | <b>Turned loop on.</>",
-    "muted": "🔇 | <b>Muted.</>",
-    "no_call": "❌ | <b>There is no active call.</>",
-    "no_enough_items": "❌ | <b>No enough items to shuffle.</>",
-    "no_input": "❔ | <b>What do you want to stream?</>",
-    "no_query": "❔ | <b>What do you want to search for?</>",
-    "no_results_found": "❌ | <b>No results found.</>",
-    "no_video_found": "❌ | <b>No video found.</>",
-    "not_in_call": "❌ | <b>Not in call.</>",
-    "not_muted": "❌ | <b>Not muted.</>",
-    "not_paused": "❌ | <b>Not paused.</>",
-    "not_streaming": "❌ | <b>Not streaming.</>",
+    "error": "❌ | <b>An error occurred.</b>",
+    "error_with_message": "❌ | <b>An error occurred:</b> {{message}}",
+    "file_too_big": "❌ | <b>This file is too big.</b>",
+    "invalid_volume": "❌ | <b>Pass a number between 0 and 200.</b>",
+    "loop_off": "🔁 | <b>Turned loop off.</b>",
+    "loop_on": "🔁 | <b>Turned loop on.</b>",
+    "muted": "🔇 | <b>Muted.</b>",
+    "no_call": "❌ | <b>There is no active call.</b>",
+    "no_enough_items": "❌ | <b>No enough items to shuffle.</b>",
+    "no_input": "❔ | <b>What do you want to stream?</b>",
+    "no_query": "❔ | <b>What do you want to search for?</b>",
+    "no_results_found": "❌ | <b>No results found.</b>",
+    "no_video_found": "❌ | <b>No video found.</b>",
+    "not_in_call": "❌ | <b>Not in call.</b>",
+    "not_muted": "❌ | <b>Not muted.</b>",
+    "not_paused": "❌ | <b>Not paused.</b>",
+    "not_streaming": "❌ | <b>Not streaming.</b>",
     "nothing_next": "Nothing streaming next",
     "nothing_now": "Nothing streaming now",
-    "ns": "🎵 | Currently streaming <b><a href=\"{{titleUrl}}\">{{title}}</></> by <b><a href=\"{{requesterUrl}}\">{{requester}}</></>...",
-    "panel": "{{nowEmoji}} | <b><a href=\"{{nowUrl}}\">{{now}}</></>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</></>",
+    "ns": "🎵 | Currently streaming <b><a href=\"{{titleUrl}}\">{{title}}</a></b> by <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b>...",
+    "panel": "{{nowEmoji}} | <b><a href=\"{{nowUrl}}\">{{now}}</a></b>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</a></b>",
     "panel_already_muted": "Already muted.",
     "panel_muted": "Muted.",
     "panel_no_enough_items": "No enough items to shuffle.",
@@ -40,21 +39,21 @@
     "panel_unmuted": "Unmuted.",
     "panel_updated": "Updated.",
     "panel_volume_set": "Volume set to {{amount}}%.",
-    "paused": "⏸ | <b>Paused.</>",
-    "queued_at": "#️⃣ | <b>Queued at position {{position}}.</>",
-    "queuing": "🎶 | <b>Queuing {{X}} items...</>",
-    "resumed": "▶️ | <b>Resumed.</>",
-    "search_active": "❌ | <b>There is an active search.</>",
-    "search_canceled": "✅ | <b>Search canceled.</>",
-    "search_footer": "<i>Reply the number of the result you want to stream or /cancel.</>",
-    "search_header": "<b>🔍 | Search results for {{query}}...</>",
-    "search_not_active": "❌ | <b>There is no search active.</>",
-    "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</></>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
-    "shuffling": "🔀 | <b>Shuffling...</>",
-    "skipped": "⏩ | <b>Skipped.</>",
-    "stopped": "⏹ | <b>Stopped.</>",
-    "streaming": "▶️ | <b>Streaming...</>",
-    "streaming_queuing": "🎶 | <b>Streaming and queuing {{X}} items...</>",
-    "unmuted": "🔈 | <b>Unmuted.</>",
-    "volume_set": "🔈 | <b>Volume set to {{amount}}%.</>"
+    "paused": "⏸ | <b>Paused.</b>",
+    "queued_at": "#️⃣ | <b>Queued at position {{position}}.</b>",
+    "queuing": "🎶 | <b>Queuing {{X}} items...</b>",
+    "resumed": "▶️ | <b>Resumed.</b>",
+    "search_active": "❌ | <b>There is an active search.</b>",
+    "search_canceled": "✅ | <b>Search canceled.</b>",
+    "search_footer": "<i>Reply the number of the result you want to stream or /cancel.</i>",
+    "search_header": "<b>🔍 | Search results for {{query}}...</b>",
+    "search_not_active": "❌ | <b>There is no search active.</b>",
+    "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</a></b>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
+    "shuffling": "🔀 | <b>Shuffling...</b>",
+    "skipped": "⏩ | <b>Skipped.</b>",
+    "stopped": "⏹ | <b>Stopped.</b>",
+    "streaming": "▶️ | <b>Streaming...</b>",
+    "streaming_queuing": "🎶 | <b>Streaming and queuing {{X}} items...</b>",
+    "unmuted": "🔈 | <b>Unmuted.</b>",
+    "volume_set": "🔈 | <b>Volume set to {{amount}}%.</b>"
 }
