--- a/locales/si.json
+++ b/locales/si.json
@@ -1,5 +1,4 @@
 {
-    "authors": ["teletipsalltestings"],
     "paused": "⏸ | <b>තාවකාලිකව නතර කරනු ලැබුවා</>",
     "not_streaming": "❌ | <b>කිසිවක් play වන්නේ නැත</>",
     "not_in_call": "❌ | <b>බොට් කථන සංවාදයට එකතු වී නැත</>",
@@ -13,7 +12,7 @@
     "streaming": "▶️ | <b>play වෙනවා...</>",
     "queued_at": "#️⃣ | <b>ඔබේ ඉල්ලීම ඉල්ලුම් ලැයිස්තුවේ {{position}} වන ස්ථානයේ පවතී</>",
     "no_call": "❌ | <b>කථන සංවාදයක් ආරම්භ කර නැත</>",
-    "no_video_found": "❌ | <b>කණගාටුයි,එය සොයාගත නොහැක</>"
+    "no_video_found": "❌ | <b>කණගාටුයි,එය සොයාගත නොහැක</>",
     "ns": "🎵 | දැන් play වන්නේ <b><a href=\"{{titleUrl}}\">{{title}}</></> by <b><a href=\"{{requesterUrl}}\">{{requester}}</></>...",
     "error": "❌ | <b>කණගාටුයි, කිසියම් දෝෂයක් මතු වී ඇත</>",
     "file_too_big": "❌ | <b>කණගාටුයි, මෙය තරමක් විශාල එකකි.</>",
