Update Bengali Translations

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -1,23 +1,59 @@
 {
-    "paused": "⏸ | <b>বিরতি।</>",
-    "not_streaming": "❌ | <b>স্ট্রিম সক্রিয় নেই।</>",
-    "not_in_call": "❌ | <b>কল সক্রিয় নেই।</>",
-    "resumed": "▶️ | <b>পুনরারম্ভ।</>",
-    "not_paused": "❌ | <b>বিরতি দেওয়া নেই।</>",
-    "skipped": "⏩ | <b>বাদ দেওয়া হয়েছে।</>",
-    "stopped": "⏹ | <b>স্ট্রিম বন্ধ।</>",
-    "streaming_queuing": "🎶 | <b>স্ট্রিমিং এবং সারিবদ্ধ করা হচ্ছে {{X}} টি আইটেম...</>",
-    "queuing": "🎶 | <b>সারিবদ্ধ করা হচ্ছে {{X}} টি আইটেম...</>",
-    "no_input": "❔ | <b>আপনি কি স্ট্রিম করতে চান?</>",
-    "streaming": "▶️ | <b>স্ট্রিমিং...</>",
-    "queued_at": "#️⃣ | <b>{{position}} নং অবস্থানে সারিবদ্ধ।</>",
-    "no_call": "❌ | <b>কোনো কল সক্রিয় নেই।</>",
-    "no_video_found": "❌ | <b>কোন ভিডিও পাওয়া যায়নি।</>",
-    "ns": "🎵 | <b><a href=\"{{requesterUrl}}\">{{requester}}</></>'র অনুরোধে বর্তমানে স্ট্রিম করা হচ্ছে <b>{{{title}}}।</>...",
-    "error": "❌ | <b>কোনো একটি ত্রুটি ঘটেছে।</>",
-    "file_too_big": "❌ | <b>এই ফাইলটি অনেক বড়।</>",
-    "error_with_message": "❌ | <b>একটি ত্রুটি ঘটেছে:</> {{message}}",
-    "invalid_volume": "❌ | <b>০ থেকে ২০০ এর মধ্যে একটি সংখ্যা দিন।</>",
-    "volume_set": "🔈 | <b>{{amount}} তে ভলিউম সেট করা হয়েছে।</>",
-    "custom_input": "কাস্টম ইনপুট"
+    "already_muted": "❌ | <b>ইতিমধ্যে নিঃশব্দ।</b>",
+    "assistant_not_in_group": "❌ | <b>আমার সহকারী এখানে নেই।</b>",
+    "caches_deleted": "🗑 | <b>ক্যাশে মুছে ফেলা হয়েছে।</b>",
+    "custom_input": "কাস্টম ইনপুট",
+    "error": "❌ | <b>কোনো একটি ত্রুটি ঘটেছে।</b>",
+    "error_with_message": "❌ | <b>একটি ত্রুটি ঘটেছে:</b> {{message}}",
+    "file_too_big": "❌ | <b>এই ফাইলটি অনেক বড়।</b>",
+    "invalid_volume": "❌ | <b>০ থেকে ২০০ এর মধ্যে একটি সংখ্যা দিন।</b>",
+    "loop_off": "🔁 | <b>লুপ বন্ধ।</b>",
+    "loop_on": "🔁 | <b>লুপ চালু।</b>",
+    "muted": "🔇 | <b>নিঃশব্দ।</b>",
+    "no_call": "❌ | <b>কোনো কল সক্রিয় নেই।</b>",
+    "no_enough_items": "❌ | <b>এলোমেলো করার জন্য পর্যাপ্ত আইটেম নেই।</b>",
+    "no_input": "❔ | <b>আপনি কি স্ট্রিম করতে চান?</b>",
+    "no_query": "❔ | <b>আপনি কি খুঁজতে চান?</b>",
+    "no_results_found": "❌ | <b>কোন ফলাফল পাওয়া যায়নি।</b>",
+    "no_video_found": "❌ | <b>কোন ভিডিও পাওয়া যায়নি।</b>",
+    "not_in_call": "❌ | <b>কল সক্রিয় নেই।</b>",
+    "not_muted": "❌ | <b>নিঃশব্দ নেই।</b>",
+    "not_paused": "❌ | <b>বিরতি দেওয়া নেই।</b>",
+    "not_streaming": "❌ | <b>স্ট্রিম সক্রিয় নেই।</b>",
+    "nothing_next": "এরপর আর কিছু স্ট্রিমিং হচ্ছে না।",
+    "nothing_now": "এখন কিছুই স্ট্রিম হচ্ছে না।",
+    "ns": "🎵 | <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b>'র অনুরোধে বর্তমানে স্ট্রিম করা হচ্ছে <b><a href=\"{{titleUrl}}\">{{{title}}}</a></b>...",
+    "panel": "{{nowEmoji}} | <b><a href=\"{{nowUrl}}\">{{now}}</a></b>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</a></b>",
+    "panel_already_muted": "ইতিমধ্যে নিঃশব্দ।",
+    "panel_muted": "নিঃশব্দ।",
+    "panel_no_enough_items": "এলোমেলো করার জন্য পর্যাপ্ত আইটেম নেই।",
+    "panel_not_in_call": "কল সক্রিয় নেই।",
+    "panel_not_muted": "নিঃশব্দ নেই।",
+    "panel_not_paused": "বিরতি দেওয়া নেই।",
+    "panel_not_streaming": "স্ট্রিম সক্রিয় নেই।",
+    "panel_paused": "বিরতি।",
+    "panel_resumed": "পুনরারম্ভ।",
+    "panel_shuffling": "এলোমেলো করা হচ্ছে...",
+    "panel_skipped": "বাদ।",
+    "panel_stopped": "স্ট্রিম বন্ধ।",
+    "panel_unmuted": "অনিঃশব্দ।",
+    "panel_updated": "আপডেট করা হয়েছে।",
+    "panel_volume_set": "{{amount}} তে ভলিউম সেট করা হয়েছে।",
+    "paused": "⏸ | <b>বিরতি।</b>",
+    "queued_at": "#️⃣ | <b>{{position}} নং অবস্থানে সারিবদ্ধ।</b>",
+    "queuing": "🎶 | <b>সারিবদ্ধ করা হচ্ছে {{X}} টি আইটেম...</b>",
+    "resumed": "▶️ | <b>পুনরারম্ভ।</b>",
+    "search_active": "❌ | <b>একটি সক্রিয় অনুসন্ধান আছে।</b>",
+    "search_canceled": "✅ | <b>অনুসন্ধান বাতিল।</b>",
+    "search_footer": "<i>আপনি যে ফলাফল স্ট্রিম করতে চান তার নম্বর দিন।</i>",
+    "search_header": "<b>🔍 | {{query}} এর জন্য অনুসন্ধান ফলাফল...</b>",
+    "search_not_active": "❌ | <b>কোনো অনুসন্ধান সক্রিয় নেই।</b>",
+    "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</a></b>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
+    "shuffling": "🔀 | <b>এলোমেলো করা হচ্ছে...</b>",
+    "skipped": "⏩ | <b>বাদ।</b>",
+    "stopped": "⏹ | <b>স্ট্রিম বন্ধ।</b>",
+    "streaming": "▶️ | <b>স্ট্রিমিং...</b>",
+    "streaming_queuing": "🎶 | <b>স্ট্রিমিং এবং সারিবদ্ধ করা হচ্ছে {{X}} টি আইটেম...</b>",
+    "unmuted": "🔈 | <b>অনিঃশব্দ।</b>",
+    "volume_set": "🔈 | <b>{{amount}} তে ভলিউম সেট করা হয়েছে।</b>"
 }
