Update Kurdish translations

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -6,54 +6,54 @@
   "error": "❌ | <b>هەڵەیەک ڕوویدا.</b>",
   "error_with_message": "❌ | <b>هەڵەیەک ڕوویدا:</b> {{message}}",
   "file_too_big": "❌ | <b>ئەم فایلە زۆر گەورەیە.</b>",
-  "invalid_volume": "❌ | <b>ژمارەیەکم پێبدە لە نێوان 0 و 200.</b>",
-  "loop_off": "🔁 | <b>دووبارەکردنەوە ناچالاککرا.</b>",
-  "loop_on": "🔁 | <b>دووبارەکردنەوە چالاککرا.</b>",
-  "muted": "🔇 | <b>بێدەنگکرا.</b>",
-  "no_call": "❌ | <b>پەیوەندییەک دەستپێنەکراوە.</b>",
-  "no_enough_items": "❌ | <b>ناتوانرێت تێکبدرێت.</b>",
-  "no_input": "❔ | <b>دەتەوێت چی پەخشبکەیت؟</b>",
+  "invalid_volume": "❌ | <b>ژمارەیەکم پێ بدە لە نێوان 0 و 200.</b>",
+  "loop_off": "🔁 | <b>دووبارەکردنەوە ناچالاک کرا.</b>",
+  "loop_on": "🔁 | <b>دووبارەکردنەوە چالاک کرا.</b>",
+  "muted": "🔇 | <b>بێدەنگ کرا.</b>",
+  "no_call": "❌ | <b>پەیوەندی دەستی پێ نەکراوە.</b>",
+  "no_enough_items": "❌ | <b>ناتوانرێت تێک بدرێت.</b>",
+  "no_input": "❔ | <b>دەتەوێت چی پەخش بکەیت؟</b>",
   "no_query": "❔ | <b>دەتەوێت بۆچی بگەڕێیت؟</b>",
   "no_results_found": "❌ | <b>هیچ ئەنجامێک نەدۆزرایەوە.</b>",
   "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</b>",
-  "not_in_call": "❌ | <b>لە پەیوەندییەکەدا نیم.</b>",
+  "not_in_call": "❌ | <b>لەناو پەیوەندیدا نیم.</b>",
   "not_muted": "❌ | <b>بێدەنگ نەکراوە.</b>",
   "not_paused": "❌ | <b>ڕانەگیراوە .</b>",
-  "not_streaming": "❌ | <b>هیچ پەخشناکرێت.</b>",
-  "nothing_next": "دواتر هیچ پەخشناکرێت",
-  "nothing_now": "ئێستا هیچ پەخشناکرێت",
-  "ns": "🎵 | لە ئێستادا <b><a href=\"{{titleUrl}}\">{{title}}</a></b> پەخشدەکرێت لەلایەن <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b>...",
+  "not_streaming": "❌ | <b>هیچ پەخش ناکرێت.</b>",
+  "nothing_next": "دواتر هیچ پەخش ناکرێت",
+  "nothing_now": "ئێستا هیچ پەخش ناکرێت",
+  "ns": "🎵 | لە ئێستادا <b><a href=\"{{titleUrl}}\">{{title}}</a></b> پەخش دەکرێت لەلایەن <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b>...",
   "panel": "{{nowEmoji}} | <b><a href=\"{{nowUrl}}\">{{now}}</a></b>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</a></b>",
   "panel_already_muted": "بێدەنگ کراوە.",
-  "panel_muted": "بێدەنگکرا.",
-  "panel_no_enough_items": "ناتوانرێت تێکبدرێت.",
-  "panel_not_in_call": "لە پەیوەندییەکەدا نیم.",
+  "panel_muted": "بێدەنگ کرا.",
+  "panel_no_enough_items": "ناتوانرێت تێک بدرێت.",
+  "panel_not_in_call": "لەناو پەیوەندیدا نیم.",
   "panel_not_muted": "بێدەنگ نەکراوە.",
   "panel_not_paused": "ڕانەگیراوە.",
   "panel_not_streaming": "هیچ لێنادرێت.",
   "panel_paused": "ڕاگیرا.",
-  "panel_resumed": "بەردەوامکرا.",
-  "panel_shuffling": "تێکدەدرێت...",
+  "panel_resumed": "دەست پێ کرایەوە.",
+  "panel_shuffling": "تێک دەدرێت...",
   "panel_skipped": "پەڕێنرا.",
   "panel_stopped": "وەستێنرا.",
-  "panel_unmuted": "بەدەنگکرا.",
-  "panel_updated": "نوێکرایەوە.",
-  "panel_volume_set": "دەنگ کرا بە {{amount}}%.",
+  "panel_unmuted": "دەنگدار کرا.",
+  "panel_updated": "نوێ کرایەوە.",
+  "panel_volume_set": "ڕێژەی دەنگ کرا بە {{amount}}%.",
   "paused": "⏸ | <b>ڕاگیرا.</b>",
   "queued_at": "#️⃣ | <b>خرایە سەرەوە: {{position}}.</b>",
   "queuing": "🎶 | <b>{{X}} دەخرێنە سەرەوە...</b>",
-  "resumed": "▶️ | <b>بەردەوامکرا.</b>",
+  "resumed": "▶️ | <b>دەست پێ کرایەوە.</b>",
   "search_active": "❌ | <b>گەڕانێکی دیکە چالاکە.</b>",
   "search_canceled": "✅ | <b>گەڕانەکە هەڵوەشێنرایەوە.</b>",
-  "search_footer": "<i>ژمارەی ئەو ئەنجامە بنێرە کە دەتەوێت لێیبدەیت یان /cancel بکە.</i>",
+  "search_footer": "<i>ژمارەی ئەو ئەنجامە بنێرە کە دەتەوێت لێی بدەیت یان /cancel بکە.</i>",
   "search_header": "<b>🔍 | ئەنجامەکانی گەڕان بۆ {{query}}...</b>",
   "search_not_active": "❌ | <b>هیچ گەڕانێک چالاک نییە.</b>",
   "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</a></b>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
-  "shuffling": "🔀 | <b>تێکدەدرێت...</b>",
+  "shuffling": "🔀 | <b>تێک دەدرێت...</b>",
   "skipped": "⏩ | <b>پەڕێنرا.</b>",
   "stopped": "⏹ | <b>وەستێنرا.</b>",
-  "streaming": "▶️ | <b>پەخشدەکرێت...</b>",
-  "streaming_queuing": "🎶 | <b>{{X}} پەخشدەکرێن و دەخرێنە سەرەوە...</b>",
-  "unmuted": "🔈 | <b>بەدەنگکرا.</b>",
-  "volume_set": "🔈 | <b>دەنگ کرا بە {{amount}}%.</b>"
+  "streaming": "▶️ | <b>پەخش دەکرێت...</b>",
+  "streaming_queuing": "🎶 | <b>{{X}} پەخش دەکرێن و دەخرێنە سەرەوە...</b>",
+  "unmuted": "🔈 | <b>دەنگدار کرا.</b>",
+  "volume_set": "🔈 | <b>ڕێژەی دەنگ کرا بە {{amount}}%.</b>"
 }
