Change tag styles in translations

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,50 +1,50 @@
 {
-  "paused": "⏸ | <b>Pausiert.</>",
-  "not_streaming": "❌ | <b>Ich spiele aktuell nichts.</>",
-  "not_in_call": "❌ | <b>Ich bin nicht im Anruf.</>",
-  "resumed": "▶️ | <b>Weiter.</>",
-  "not_paused": "❌ | <b>Nichts ist pausiert.</>",
-  "skipped": "⏩ | <b>Übersprungen.</>",
-  "stopped": "⏹ | <b>Gestoppt.</>",
-  "streaming_queuing": "🎶 | <b>Ich spiele und setze {{X}} Videos auf die Warteliste...</>",
-  "queuing": "🎶 | <b>Ich setze {{X}} Videos auf die Warteliste...</>",
-  "no_input": "❔ | <b>Was soll ich abspielen?</>",
-  "streaming": "▶️ | <b>Spiele ich...</>",
-  "queued_at": "#️⃣ | <b>In Position {{position}} auf die Warteliste gesetzt.</>",
-  "no_call": "❌ | <b>Hier ist kein Anruf aktiv.</>",
-  "no_video_found": "❌ | <b>Kein Video gefunden.</>",
-  "ns": "🎵 | Ich spiele aktuell <b><a href=\"{{titleUrl}}\">{{title}}</></> von <b><a href=\"{{requesterUrl}}\">{{requester}}</></>...",
-  "error": "❌ | <b>Ein Fehler ist aufgetreten.</>",
-  "file_too_big": "❌ | <b>Die Datei ist zu groß.</>",
-  "error_with_message": "❌ | <b>Ein Fehler ist aufgetreten:</> {{message}}",
-  "invalid_volume": "❌ | <b>Gebe eine Nummer zwischen 0 und 200 an.</>",
-  "volume_set": "🔈 | <b>Lautstärke gesetzt auf {{amount}}.</>",
+  "paused": "⏸ | <b>Pausiert.</b>",
+  "not_streaming": "❌ | <b>Ich spiele aktuell nichts.</b>",
+  "not_in_call": "❌ | <b>Ich bin nicht im Anruf.</b>",
+  "resumed": "▶️ | <b>Weiter.</b>",
+  "not_paused": "❌ | <b>Nichts ist pausiert.</b>",
+  "skipped": "⏩ | <b>Übersprungen.</b>",
+  "stopped": "⏹ | <b>Gestoppt.</b>",
+  "streaming_queuing": "🎶 | <b>Ich spiele und setze {{X}} Videos auf die Warteliste...</b>",
+  "queuing": "🎶 | <b>Ich setze {{X}} Videos auf die Warteliste...</b>",
+  "no_input": "❔ | <b>Was soll ich abspielen?</b>",
+  "streaming": "▶️ | <b>Spiele ich...</b>",
+  "queued_at": "#️⃣ | <b>In Position {{position}} auf die Warteliste gesetzt.</b>",
+  "no_call": "❌ | <b>Hier ist kein Anruf aktiv.</b>",
+  "no_video_found": "❌ | <b>Kein Video gefunden.</b>",
+  "ns": "🎵 | Ich spiele aktuell <b><a href=\"{{titleUrl}}\">{{title}}</a></b> von <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b>...",
+  "error": "❌ | <b>Ein Fehler ist aufgetreten.</b>",
+  "file_too_big": "❌ | <b>Die Datei ist zu groß.</b>",
+  "error_with_message": "❌ | <b>Ein Fehler ist aufgetreten:</b> {{message}}",
+  "invalid_volume": "❌ | <b>Gebe eine Nummer zwischen 0 und 200 an.</b>",
+  "volume_set": "🔈 | <b>Lautstärke gesetzt auf {{amount}}.</b>",
   "custom_input": "Benutzerdefinierte Eingabe",
-  "muted": "🔇 | <b>Stummgeschaltet.</>",
+  "muted": "🔇 | <b>Stummgeschaltet.</b>",
   "panel_muted": "Stummgeschaltet.",
-  "unmuted": "🔈 | <b>An gestellt.</>",
+  "unmuted": "🔈 | <b>An gestellt.</b>",
   "panel_unmuted": "An gestellt.",
-  "already_muted": "❌ | <b>Bereits stumm.</>",
+  "already_muted": "❌ | <b>Bereits stumm.</b>",
   "panel_already_muted": "Bereits stumm.",
-  "not_muted": "❌ | <b>Nicht stumm.</>",
+  "not_muted": "❌ | <b>Nicht stumm.</b>",
   "panel_not_muted": "Nicht stumm.",
-  "shuffling": "🔀 | <b>Zufällige Wiedergabe...</>",
+  "shuffling": "🔀 | <b>Zufällige Wiedergabe...</b>",
   "panel_shuffling": "Zufällige Wiedergabe...",
-  "no_enough_items": "❌ | <b>Nicht genug Songs zum spielen.</>",
+  "no_enough_items": "❌ | <b>Nicht genug Songs zum spielen.</b>",
   "panel_no_enough_items": "Nicht genug Songs zum spielen.",
-  "panel": "{{nowEmoji}} | <b><a href=\"{{nowUrl}}\">{{now}}</></>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</></>",
+  "panel": "{{nowEmoji}} | <b><a href=\"{{nowUrl}}\">{{now}}</a></b>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</a></b>",
   "nothing_now": "Nichts zum jetzt spielen",
   "nothing_next": "Nichts zum später spilen",
   "panel_updated": "Aktuallisiert.",
-  "no_query": "❔ | <b>Wonach möchtest du suchen?</>",
-  "no_results_found": "❌ | <b>Keine Ergebnisse gefunden.</>",
-  "search_active": "❌ | <b>Es gibt eine aktive Suche.</>",
-  "search_not_active": "❌ | <b>Es gibt keine aktive Suche.</>",
-  "search_header": "<b>🔍 | Ergebnisse für {{query}}...</>",
-  "search_footer": "<i>Antworte auf die Nummer des Songs, das du spielen möchtest oder klicke auf /cancel.</>",
-  "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</></>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
-  "search_canceled": "✅ | <b>Suche abgebrochen.</>",
-  "loop_on": "🔁 | <b>Dauerschleife an.</>",
-  "loop_off": "🔁 | <b>Dauerschleife aus.</>",
-  "caches_deleted": "🗑 | <b>Cache gelöscht.</>"
+  "no_query": "❔ | <b>Wonach möchtest du suchen?</b>",
+  "no_results_found": "❌ | <b>Keine Ergebnisse gefunden.</b>",
+  "search_active": "❌ | <b>Es gibt eine aktive Suche.</b>",
+  "search_not_active": "❌ | <b>Es gibt keine aktive Suche.</b>",
+  "search_header": "<b>🔍 | Ergebnisse für {{query}}...</b>",
+  "search_footer": "<i>Antworte auf die Nummer des Songs, das du spielen möchtest oder klicke auf /cancel.</i>",
+  "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</a></b>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
+  "search_canceled": "✅ | <b>Suche abgebrochen.</b>",
+  "loop_on": "🔁 | <b>Dauerschleife an.</b>",
+  "loop_off": "🔁 | <b>Dauerschleife aus.</b>",
+  "caches_deleted": "🗑 | <b>Cache gelöscht.</b>"
 }
