--- a/locales/es.json
+++ b/locales/es.json
@@ -1,23 +1,23 @@
 {
-  "paused": "⏸ | <b>Pausado.</>",
-  "not_streaming": "❌ | <b>No estoy transmitiendo.</>",
-  "not_in_call": "❌ | <b>No estoy en la llamada.</>",
-  "resumed": "▶️ | <b>Resumido.</>",
-  "not_paused": "❌ | <b>No está pausado.</>",
-  "skipped": "⏩ | <b>Saltado.</>",
-  "stopped": "⏹ | <b>Detenido.</>",
-  "streaming_queuing": "🎶 | <b>Transmitiendo y agregando {{X}} elementos a la lista...</>",
-  "queuing": "🎶 | <b>Agregando {{X}} elementos...</>",
-  "no_input": "❔ | <b>¿Qué quieres transmitir?</>",
-  "streaming": "▶️ | <b>Transmitiendo...</>",
-  "queued_at": "#️⃣ | <b>Agregado a la lista en posición {{position}}.</>",
-  "no_call": "❌ | <b>No hay llamada activa.</>",
-  "no_video_found": "❌ | <b>No se encontró el video.</>",
-  "ns": "🎵 | Actualmente transmitiendo <b><a href=\"{{titleUrl}}\">{{title}}</></> de <b><a href=\"{{requesterUrl}}\">{{requester}}</></>...",
-  "error": "❌ | <b>Ocurrió un error.</>",
-  "file_too_big": "❌ | <b>Este archivo es muy grande.</>",
-  "error_with_message": "❌ | <b>Ocurrió un error:</> {{message}}",
-  "invalid_volume": "❌ | <b>Debes enviar un número entre 0 y 200.</>",
-  "volume_set": "🔈 | <b>Volumen configurado a {{amount}}.</>",
+  "paused": "⏸ | <b>Pausado.</b>",
+  "not_streaming": "❌ | <b>No estoy transmitiendo.</b>",
+  "not_in_call": "❌ | <b>No estoy en la llamada.</b>",
+  "resumed": "▶️ | <b>Resumido.</b>",
+  "not_paused": "❌ | <b>No está pausado.</b>",
+  "skipped": "⏩ | <b>Saltado.</b>",
+  "stopped": "⏹ | <b>Detenido.</b>",
+  "streaming_queuing": "🎶 | <b>Transmitiendo y agregando {{X}} elementos a la lista...</b>",
+  "queuing": "🎶 | <b>Agregando {{X}} elementos...</b>",
+  "no_input": "❔ | <b>¿Qué quieres transmitir?</b>",
+  "streaming": "▶️ | <b>Transmitiendo...</b>",
+  "queued_at": "#️⃣ | <b>Agregado a la lista en posición {{position}}.</b>",
+  "no_call": "❌ | <b>No hay llamada activa.</b>",
+  "no_video_found": "❌ | <b>No se encontró el video.</b>",
+  "ns": "🎵 | Actualmente transmitiendo <b><a href=\"{{titleUrl}}\">{{title}}</a></b> de <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b>...",
+  "error": "❌ | <b>Ocurrió un error.</b>",
+  "file_too_big": "❌ | <b>Este archivo es muy grande.</b>",
+  "error_with_message": "❌ | <b>Ocurrió un error:</b> {{message}}",
+  "invalid_volume": "❌ | <b>Debes enviar un número entre 0 y 200.</b>",
+  "volume_set": "🔈 | <b>Volumen configurado a {{amount}}.</b>",
   "custom_input": "Entrada personalizada"
 }
