--- a/locales/id.json
+++ b/locales/id.json
@@ -1,22 +1,22 @@
 {
-  "paused": "⏸ | <b>Dijeda.</>",
-  "not_streaming": "❌ | <b>Tidak sedang memutar lagu.</>",
-  "not_in_call": "❌ | <b>Tidak dalam panggilan.</>",
-  "resumed": "▶️ | <b>Dilanjutkan.</>",
-  "not_paused": "❌ | <b>Tidak dijeda.</>",
-  "skipped": "⏩ | <b>Dilewati.</>",
-  "stopped": "⏹ | <b>Berhenti.</>",
-  "streaming_queuing": "🎶 | <b>Memutar dan dimasukkan kedalam antrian {{X}}...</>",
-  "queuing": "🎶 | <b>Mengantri {{X}} item...</>",
-  "no_input": "❔ | <b>Putar lagu apa yang Anda inginkan?</>",
-  "streaming": "▶️ | <b>Memutar...</>",
-  "queued_at": "#️⃣ | <b>Antri di posisi {{position}}.</>",
-  "no_call": "❌ | <b>Tidak ada panggilan aktif.</>",
-  "no_video_found": "❌ | <b>Tidak ada video yang ditemukan.</>",
-  "ns": "🎵 | Sedang memutar <b><a href=\"{{titleUrl}}\">{{title}}</></> oleh <b><a href=\"{{requesterUrl}}\">{{requester}}</></>...",
-  "error": "❌ | <b>Terjadi kesalahan.</>",
-  "file_too_big": "❌ | <b>Ukuran file terlalu besar.</>",
-  "error_with_message": "❌ | <b>Sebuah kesalahan terjadi:</> {{message}}",
-  "invalid_volume": "❌ | <b>Masukkan angka 1-200.</>",
-  "volume_set": "🔈 | <b>Volume diatur ke {{amount}}.</>"
+  "paused": "⏸ | <b>Dijeda.</b>",
+  "not_streaming": "❌ | <b>Tidak sedang memutar lagu.</b>",
+  "not_in_call": "❌ | <b>Tidak dalam panggilan.</b>",
+  "resumed": "▶️ | <b>Dilanjutkan.</b>",
+  "not_paused": "❌ | <b>Tidak dijeda.</b>",
+  "skipped": "⏩ | <b>Dilewati.</b>",
+  "stopped": "⏹ | <b>Berhenti.</b>",
+  "streaming_queuing": "🎶 | <b>Memutar dan dimasukkan kedalam antrian {{X}}...</b>",
+  "queuing": "🎶 | <b>Mengantri {{X}} item...</b>",
+  "no_input": "❔ | <b>Putar lagu apa yang Anda inginkan?</b>",
+  "streaming": "▶️ | <b>Memutar...</b>",
+  "queued_at": "#️⃣ | <b>Antri di posisi {{position}}.</b>",
+  "no_call": "❌ | <b>Tidak ada panggilan aktif.</b>",
+  "no_video_found": "❌ | <b>Tidak ada video yang ditemukan.</b>",
+  "ns": "🎵 | Sedang memutar <b><a href=\"{{titleUrl}}\">{{title}}</a></b> oleh <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b>...",
+  "error": "❌ | <b>Terjadi kesalahan.</b>",
+  "file_too_big": "❌ | <b>Ukuran file terlalu besar.</b>",
+  "error_with_message": "❌ | <b>Sebuah kesalahan terjadi:</b> {{message}}",
+  "invalid_volume": "❌ | <b>Masukkan angka 1-200.</b>",
+  "volume_set": "🔈 | <b>Volume diatur ke {{amount}}.</b>"
 }
