--- a/locales/ml.json
+++ b/locales/ml.json
@@ -1,18 +1,18 @@
 {
-  "paused": "⏸ | <b>താൽക്കാലികമായി നിർത്തി.</>",
-  "not_streaming": "❌ | <b>സ്ട്രീമിംഗ് അല്ല.</>",
-  "not_in_call": "❌ | <b>കോളിലല്ല.</>",
-  "resumed": "▶️ | <b>പുനരാരംഭിച്ചു.</>",
-  "not_paused": "❌ | <b>താൽക്കാലികമായി നിർത്തിയിട്ടില്ല.</>",
-  "skipped": "⏩ | <b>ഒഴിവാക്കി.</>",
-  "stopped": "⏹ | <b>നിർത്തി.</>",
-  "streaming_queuing": "🎶 | <b>സ്ട്രീം ചെയ്യുകയും {{X}} ഇനങ്ങൾ ക്യൂ ചെയ്യുകയും ചെയ്യുന്നു...</>",
-  "queuing": "🎶 | <b>{{X}} ഇനം ക്യൂ ചെയ്യുന്നു...</>",
-  "no_input": "❔ | <b>നിങ്ങൾ എന്താണ് സ്ട്രീം ചെയ്യാൻ ആഗ്രഹിക്കുന്നത്?</>",
-  "streaming": "▶️ | <b>സ്ട്രീമിംഗ്...</>",
-  "queued_at": "#️⃣ | <b>{{position}} സ്ഥാനം ൽ ക്യൂ.</>",
-  "no_call": "❌ | <b>സജീവ കോൾ ഇല്ല.</>",
-  "no_video_found": "❌ | <b>വീഡിയോ കണ്ടെത്തിയില്ല.</>",
-  "ns": "🎵 | <b><a href=\"{{requesterUrl}}\">{{requester}}</></> അഭ്യർത്ഥിച്ച <b><a href=\"{{titleUrl}}\">{{title}}</></> നിലവിൽ സ്ട്രീം ചെയ്യുന്നു ",
-  "error": "❌ | <b>ഒരു പിശക് സംഭവിച്ചു.</>"
+  "paused": "⏸ | <b>താൽക്കാലികമായി നിർത്തി.</b>",
+  "not_streaming": "❌ | <b>സ്ട്രീമിംഗ് അല്ല.</b>",
+  "not_in_call": "❌ | <b>കോളിലല്ല.</b>",
+  "resumed": "▶️ | <b>പുനരാരംഭിച്ചു.</b>",
+  "not_paused": "❌ | <b>താൽക്കാലികമായി നിർത്തിയിട്ടില്ല.</b>",
+  "skipped": "⏩ | <b>ഒഴിവാക്കി.</b>",
+  "stopped": "⏹ | <b>നിർത്തി.</b>",
+  "streaming_queuing": "🎶 | <b>സ്ട്രീം ചെയ്യുകയും {{X}} ഇനങ്ങൾ ക്യൂ ചെയ്യുകയും ചെയ്യുന്നു...</b>",
+  "queuing": "🎶 | <b>{{X}} ഇനം ക്യൂ ചെയ്യുന്നു...</b>",
+  "no_input": "❔ | <b>നിങ്ങൾ എന്താണ് സ്ട്രീം ചെയ്യാൻ ആഗ്രഹിക്കുന്നത്?</b>",
+  "streaming": "▶️ | <b>സ്ട്രീമിംഗ്...</b>",
+  "queued_at": "#️⃣ | <b>{{position}} സ്ഥാനം ൽ ക്യൂ.</b>",
+  "no_call": "❌ | <b>സജീവ കോൾ ഇല്ല.</b>",
+  "no_video_found": "❌ | <b>വീഡിയോ കണ്ടെത്തിയില്ല.</b>",
+  "ns": "🎵 | <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b> അഭ്യർത്ഥിച്ച <b><a href=\"{{titleUrl}}\">{{title}}</a></b> നിലവിൽ സ്ട്രീം ചെയ്യുന്നു ",
+  "error": "❌ | <b>ഒരു പിശക് സംഭവിച്ചു.</b>"
 }
