--- a/locales/fa.json
+++ b/locales/fa.json
@@ -1,17 +1,17 @@
 {
-  "paused": "⏸ | <b>مکث کردم.</>",
-  "not_streaming": "❌ | <b>در حال استریم نیستم.</>",
-  "not_in_call": "❌ | <b>در ویس چت نیستم.</>",
-  "resumed": "▶️ | <b>ادامه میدم.</>",
-  "not_paused": "❌ | <b>مکث نشده بود.</>",
-  "skipped": "⏩ | <b>رد شد.</>",
-  "stopped": "⏹ | <b>متوقف شد.</>",
-  "streaming_queuing": "🎶 | <b>در حال استریم و صف بندی {{X}} مورد...</>",
-  "queuing": "🎶 | <b>صف بندی {{X}} مورد...</>",
-  "no_input": "❔ | <b>می‌خواهید چی چیزی را استریم کنید؟</>",
-  "streaming": "▶️ | <b>در حال استریم...</>",
-  "queued_at": "#️⃣ | <b>در موقعیت {{position}} از صف قرار گرفت.</>",
-  "no_call": "❌ | <b>ویس چت فعال نیست.</>",
-  "no_video_found": "❌ | <b>هیچ ویدئویی یافت نشد.</>",
-  "ns": "🎵 | هم اکنون در حال استریم <b><a href=\"{{titleUrl}}\">{{title}}</></> توسط <b><a href=\"{{requesterUrl}}\">{{requester}}</></>..."
+  "paused": "⏸ | <b>مکث کردم.</b>",
+  "not_streaming": "❌ | <b>در حال استریم نیستم.</b>",
+  "not_in_call": "❌ | <b>در ویس چت نیستم.</b>",
+  "resumed": "▶️ | <b>ادامه میدم.</b>",
+  "not_paused": "❌ | <b>مکث نشده بود.</b>",
+  "skipped": "⏩ | <b>رد شد.</b>",
+  "stopped": "⏹ | <b>متوقف شد.</b>",
+  "streaming_queuing": "🎶 | <b>در حال استریم و صف بندی {{X}} مورد...</b>",
+  "queuing": "🎶 | <b>صف بندی {{X}} مورد...</b>",
+  "no_input": "❔ | <b>می‌خواهید چی چیزی را استریم کنید؟</b>",
+  "streaming": "▶️ | <b>در حال استریم...</b>",
+  "queued_at": "#️⃣ | <b>در موقعیت {{position}} از صف قرار گرفت.</b>",
+  "no_call": "❌ | <b>ویس چت فعال نیست.</b>",
+  "no_video_found": "❌ | <b>هیچ ویدئویی یافت نشد.</b>",
+  "ns": "🎵 | هم اکنون در حال استریم <b><a href=\"{{titleUrl}}\">{{title}}</a></b> توسط <b><a href=\"{{requesterUrl}}\">{{requester}}</a></b>..."
 }
