--- a/locales/pt_BR.json
+++ b/locales/pt_BR.json
@@ -1,16 +1,16 @@
 {
-  "paused": "⏸ | <b> Pausado. </>",
-  "not_streaming": "❌ | <b>Sem streaming.</>",
-  "not_in_call": "❌ | <b>Não está em chamada.</>",
-  "resumed": "▶️ | <b> Retomado. </>",
-  "not_paused": "❌ | <b> Não pausado. </>",
-  "skipped": "⏩ | <b> Ignorado. </>",
-  "stopped": "⏹ | <b> Parado. </>",
-  "streaming_queuing": "🎶 | <b> Streaming e fila {{X}} itens ... </>",
-  "queuing": "🎶 | <b> Fila {{X}} itens ... </>",
-  "no_input": "❔ | <b> O que você deseja transmitir?</>",
-  "streaming": "▶️ | <b> Streaming ... </>",
-  "queued_at": "#️⃣ | <b> Na fila na posição {{position}}.</>",
-  "no_call": "❌ | <b> Não há nenhuma chamada ativa.</>",
-  "no_video_found": "❌ | <b> Nenhum vídeo encontrado.</>"
+  "paused": "⏸ | <b> Pausado. </b>",
+  "not_streaming": "❌ | <b>Sem streaming.</b>",
+  "not_in_call": "❌ | <b>Não está em chamada.</b>",
+  "resumed": "▶️ | <b> Retomado. </b>",
+  "not_paused": "❌ | <b> Não pausado. </b>",
+  "skipped": "⏩ | <b> Ignorado. </b>",
+  "stopped": "⏹ | <b> Parado. </b>",
+  "streaming_queuing": "🎶 | <b> Streaming e fila {{X}} itens ... </b>",
+  "queuing": "🎶 | <b> Fila {{X}} itens ... </b>",
+  "no_input": "❔ | <b> O que você deseja transmitir?</b>",
+  "streaming": "▶️ | <b> Streaming ... </b>",
+  "queued_at": "#️⃣ | <b> Na fila na posição {{position}}.</b>",
+  "no_call": "❌ | <b> Não há nenhuma chamada ativa.</b>",
+  "no_video_found": "❌ | <b> Nenhum vídeo encontrado.</b>"
 }
