Add lyrics command (#67)
* Add lyrics command

* Try adding artist param

* Update the lyrics string

* Update dependencies

--- a/locales/en.json
+++ b/locales/en.json
@@ -55,5 +55,7 @@
   "streaming": "▶️ | <b>Streaming...</b>",
   "streaming_queuing": "🎶 | <b>Streaming and queuing {{X}} items...</b>",
   "unmuted": "🔈 | <b>Unmuted.</b>",
-  "volume_set": "🔈 | <b>Volume set to {{amount}}%.</b>"
+  "volume_set": "🔈 | <b>Volume set to {{amount}}%.</b>",
+  "lyrics_not_found": "❌ | <b>Lyrics not found.</b>",
+  "lyrics": "<b>{{title}}</b> #lyrics\n\n{{lyrics}}"
 }
